# ai4se-photo-watermark

./: .gitignore  BUG_FIX_REPORT.md  BUILD_GUIDE.md  FEATURE_STATUS.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_REPORT.md  PHASE4_COMPLETION_REPORT.md  PRD.md  README.md  REPORT.md  WORKPLAN.md  build.bat  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  setup.py  watermark.py
.github/: copilot-instructions.md
.watermark_config/: config.json  templates.json
src/: main.py
src/photo_watermark/: __init__.py  __main__.py  cli.py  exceptions.py
src/photo_watermark/core/: __init__.py  exif_reader.py  image_processor.py  watermark.py
src/photo_watermark/utils/: file_utils.py  validators.py
src/watermark_app/: __init__.py  app.py
src/watermark_app/config/: settings.py
src/watermark_app/core/: __init__.py  config_manager.py  exporter.py  file_manager.py  image_processor.py  watermark.py
src/watermark_app/gui/: __init__.py  main_window.py
src/watermark_app/gui/dialogs/: __init__.py  about_dialog.py  export_dialog.py  help_dialog.py  progress_dialog.py  template_dialog.py
src/watermark_app/gui/widgets/: __init__.py  export_dialog.py  file_list.py  image_list_panel.py  position_control_panel.py  preview_panel.py  watermark_control_panel.py  watermark_panel.py
src/watermark_app/utils/: __init__.py  constants.py  font_mapper.py  helpers.py  logger.py  validators.py
templates/: 品牌标识.json  机密文档.json  版权水印.json  草稿水印.json
tests/: __init__.py  conftest.py  test_cli.py  test_exif_reader.py  test_image_processor.py  test_integration.py  test_utils_validators.py  test_watermark.py
tests/test_config/: __init__.py  test_settings.py
tests/test_core/: __init__.py
tests/test_gui/: __init__.py
